# raspi-turret

./: CMakeLists.txt  README.md  face_detection  face_detection.cpp
